Menu is now rendered from a module

--- a/cronoappliance/crono/templates/crono/home.html
+++ b/cronoappliance/crono/templates/crono/home.html
@@ -1,1 +1,10 @@
-Crono
+{% extends 'crono/layout.html' %}
+{% load staticfiles %}
+
+{% block head %}{% endblock %}
+
+{% block title %}Dashboards Availables{% endblock %}
+{% block subtitle %}Watch how your system is working{% endblock %}
+
+{% block content %}
+{% endblock %}
