--- a/cronoappliance/crono/templates/crono/layout.html
+++ b/cronoappliance/crono/templates/crono/layout.html
@@ -13,6 +13,17 @@
 		<link rel="stylesheet" type="text/css" href="{% static 'crono/css/sb-admin.css' %}"}>
 		<link rel="stylesheet" type="text/css" href="{% static 'crono/css/css/font-awesome.min.css' %}"}>
 
+    <script type="text/javascript">
+      $(document).ready(function() {
+
+        // Menu
+        $.getJSON("{% url 'menu' %}", function(menu) {
+          for (var i = 0; i<menu.length; i++) {
+            $("#rptx-menu").append('<li><a href="'+menu[i][1]+'"><i class="fa fa-'+menu[i][2]+'"></i> '+menu[i][0]+'</a></li>')
+          }
+        })
+      });
+    </script>
 
 		{% block head %}{% endblock %}
 	</head>
@@ -30,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Reporterix</a>
+          <a class="navbar-brand" href="index.html">Crono</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -104,7 +115,7 @@
 
         <div class="row">
           <div class="col-lg-12">
-            <h1>{% block title %}{% endblock %} <small>A Blank Slate</small></h1>
+            <h1>{% block title %}{% endblock %} <small>{% block subtitle %}{% endblock %}</small></h1>
             <!--
             <ol class="breadcrumb">
               <li><a href="{}"><i class="icon-dashboard"></i> Dashboard</a></li>
@@ -120,7 +131,7 @@
       </div><!-- /#page-wrapper -->
 
     </div><!-- /#wrapper -->
-		
+
 	</body>
 
 </html>
