--- a/cronoappliance/crono/templates/crono/home.html
+++ b/cronoappliance/crono/templates/crono/home.html
@@ -7,4 +7,112 @@
 {% block subtitle %}Watch how your system is working{% endblock %}
 
 {% block content %}
+
+<div class="row">
+	<div class="col-lg-4">
+		<div class="panel panel-info">
+			<div class="panel-heading">
+				<a href="">
+					<div class="row">
+						<div class="col-xs-6">
+							<i class="fa fa-tasks fa-5x"></i>
+						</div>
+						<div class="col-xs-6 text-right">						
+							<p class="announcement-text"><b>Sites info</b></p>
+							<p class="announcement-text">Domains, time and bandwidth</p>
+						</div>
+					</div>
+				</a>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-4">
+		<div class="panel panel-info">
+			<div class="panel-heading">
+				<a href="">
+					<div class="row">
+						<div class="col-xs-6">
+							<i class="fa fa-tasks fa-5x"></i>
+						</div>
+						<div class="col-xs-6 text-right">						
+							<p class="announcement-text"><b>User info</b></p>
+							<p class="announcement-text">What users do with your connection</p>
+						</div>
+					</div>
+				</a>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-4">
+		<div class="panel panel-info">
+			<div class="panel-heading">
+				<a href="">
+					<div class="row">
+						<div class="col-xs-6">
+							<i class="fa fa-tasks fa-5x"></i>
+						</div>
+						<div class="col-xs-6 text-right">						
+							<p class="announcement-text"><b>Links usage</b></p>
+							<p class="announcement-text">Special attention for links usage</p>
+						</div>
+					</div>
+				</a>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-lg-4">
+		<div class="panel panel-info">
+			<div class="panel-heading">
+				<a href="">
+					<div class="row">
+						<div class="col-xs-6">
+							<i class="fa fa-tasks fa-5x"></i>
+						</div>
+						<div class="col-xs-6 text-right">						
+							<p class="announcement-text"><b>Filter</b></p>
+							<p class="announcement-text">Domain filered hits</p>
+						</div>
+					</div>
+				</a>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-4">
+		<div class="panel panel-info">
+			<div class="panel-heading">
+				<a href="">
+					<div class="row">
+						<div class="col-xs-6">
+							<i class="fa fa-tasks fa-5x"></i>
+						</div>
+						<div class="col-xs-6 text-right">						
+							<p class="announcement-text"><b>Proxy health</b></p>
+							<p class="announcement-text">Current status of proxy functions</p>
+						</div>
+					</div>
+				</a>
+			</div>
+		</div>
+	</div>
+	<div class="col-lg-4">
+		<div class="panel panel-info">
+			<div class="panel-heading">
+				<a href="">
+					<div class="row">
+						<div class="col-xs-6">
+							<i class="fa fa-tasks fa-5x"></i>
+						</div>
+						<div class="col-xs-6 text-right">						
+							<p class="announcement-text">Links usage</p>
+						</div>
+					</div>
+				</a>
+			</div>
+		</div>
+	</div>
+</div>
+
 {% endblock %}
