--- a/cronoappliance/crono/templates/crono/layout.html
+++ b/cronoappliance/crono/templates/crono/layout.html
@@ -8,9 +8,11 @@
 
 		{% load staticfiles %}
 		<script type="text/javascript" src="{% static 'crono/js/jquery-1.7.2.min.js' %}"></script>
+    <script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 		<script type="text/javascript" src="{% static 'crono/js/bootstrap.js' %}"></script>
 		<link rel="stylesheet" type="text/css" href="{% static 'crono/css/bootstrap.css' %}"}>
 		<link rel="stylesheet" type="text/css" href="{% static 'crono/css/sb-admin.css' %}"}>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
 		<link rel="stylesheet" type="text/css" href="{% static 'crono/css/css/font-awesome.min.css' %}"}>
 
     <script type="text/javascript">
