--- a/cronoappliance/crono/templates/crono/home.html
+++ b/cronoappliance/crono/templates/crono/home.html
@@ -12,7 +12,7 @@
 	<div class="col-lg-4">
 		<div class="panel panel-info">
 			<div class="panel-heading">
-				<a href="">
+				<a href="top10/">
 					<div class="row">
 						<div class="col-xs-6">
 							<i class="fa fa-tasks fa-5x"></i>
