--- a/cronoappliance/crono/templates/crono/dashboards/top_ten.html
+++ b/cronoappliance/crono/templates/crono/dashboards/top_ten.html
@@ -2,6 +2,12 @@
 {% load staticfiles %}
 
 {% block head %}
+
+	<script src="{% static 'crono/js/dx.chartjs.debug.js' %}"></script>
+	<script src="{% static 'crono/js/dx.chartjs.js' %}"></script>
+	<script src="{% static 'crono/js/knockout-2.2.1.js' %}"></script>
+	<script src="{% static 'crono/js/globalize.min.js' %}"></script>
+
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$("#urls").hide();
@@ -28,15 +34,24 @@
 				to = to.replace('/', '_');
 
 				$.getJSON("{% url 'top10byrange' 999 998 %}".replace(999, from).replace(998, to), function(data) {
+					var pieChartDataSource = [];					
 					for (var i = 0; i<data.urls.length; i++) {
-						$('#urls tr:last').after('<tr class="removeRow"><td>'+data.urls[i].url+'</td><td>'+data.urls[i].count+'</td><tr>')
+						$('#urls tr:last').after('<tr class="removeRow"><td>'+data.urls[i].url+'</td><td>'+data.urls[i].count+'</td><tr>');
+						pieChartDataSource.push({'category': data.urls[i].url, 'value': data.urls[i].count})
 					}
+
+					$("#pieChartContainer").dxPieChart({
+		        dataSource: pieChartDataSource,
+		        series: {
+		            argumentField: 'category',
+		            valueField: 'value',
+		        }    
+			    });
 				});
 			})
 
 		})
 	</script>
-
 {% endblock %}
 
 {% block title %}{% endblock %}
@@ -48,13 +63,16 @@
 	Date to: <input type="text" id="datepicker_to">
 	<button id="datepicker_select">Filter</button><br>
 
-	<table id="urls" class="table">
-		<caption><h3>Top 10 visited URLs</h3></caption>
-		<thead>
-			<th>URL</th>
-			<th>HITS</th>
-		</thead>
-		<tbody></tbody>
-	</table>
+  <div class="col-lg-4">
+		<table id="urls" class="table">
+			<caption><h3>Top 10 visited URLs</h3></caption>
+			<thead>
+				<th>URL</th>
+				<th>HITS</th>
+			</thead>
+			<tbody></tbody>
+		</table>
+	</div>
 
+	<br><div id="pieChartContainer" style="float:left;max-width:400px;height: 200px;"></div>
 {% endblock %}
