--- a/cronoappliance/crono/templates/crono/dashboards/top_ten.html
+++ b/cronoappliance/crono/templates/crono/dashboards/top_ten.html
@@ -78,17 +78,25 @@
 	</script>
 {% endblock %}
 
-{% block title %}{% endblock %}
-{% block subtitle %}{% endblock %}
+{% block title %}Sites Info{% endblock %}
+{% block subtitle %}Sites visited by users{% endblock %}
 
 {% block content %}
 
-	Date from: <input type="text" id="datepicker_from">
-	Date to: <input type="text" id="datepicker_to">
-	<button id="datepicker_select">Filter</button><br>
+	<div class="col-lg-6">
+		<div class="panel panel-info">
+			<div class="panel-heading">
+				Date from: <input type="text" id="datepicker_from">
+				Date to: <input type="text" id="datepicker_to">
+				<button id="datepicker_select">Filter</button><br>
+			</div>
+		</div>
+	</div>
 
+	<div style="clear:both"></div>
+	
   <br><br>
-  <div id="url_box" class="col-lg-4">
+  <div id="url_box" class="col-lg-5">
   	<div class="panel panel-primary">
   		<div class="panel-heading">
   			<h3 class="panel-title">Top 10 visited URLs</h3>
@@ -102,14 +110,13 @@
 					</thead>
 					<tbody></tbody>
 				</table>
-				<div id="pieChartContainer" style="float:left;max-width:450px;height: 225px;"></div>
+				<div id="pieChartContainer" style="float:left;max-width:525px;height: 200px;"></div>
 			</div>
 		</div>
 	</div>
 
-
-  <div id="url_box_denied" class="col-lg-4">
-  	<div class="panel panel-primary">
+  <div id="url_box_denied" class="col-lg-5">
+  	<div class="panel panel-danger">
   		<div class="panel-heading">
   			<h3 class="panel-title">Top 10 denied URLs</h3>
   		</div>
@@ -122,7 +129,8 @@
 					</thead>
 					<tbody></tbody>
 				</table>
-				<div id="pieChartContainerDenied" style="float:left;max-width:450px;height: 225px;"></div>
+				
+				<div id="pieChartContainerDenied" style="float:left;max-width:525px;height: 200px;"></div>
 			</div>
 		</div>
 	</div>
