The module now can be foldded

--- a/cronoappliance/crono/templates/crono/layout.html
+++ b/cronoappliance/crono/templates/crono/layout.html
@@ -17,10 +17,10 @@
 
     <script type="text/javascript">
       $(document).ready(function() {
-
         var pathname = window.location.pathname;
         pathname = pathname.split('/');
         view = pathname[pathname.length-1];
+        $("#rptx-menu-show").hide();
 
         // Menu
         $.getJSON("{% url 'menu' %}", function(menu) {
@@ -34,6 +34,17 @@
 
             $("#rptx-menu").append('<li class="'+active+'"><a href="'+menu[i][3]+'"><i class="fa fa-'+menu[i][2]+'"></i> '+menu[i][0]+'</a></li>')
           }
+
+          $("#rptx-menu").append('<li id="toggle_menu" class=""><a href="#"><i class="fa"></i> Fold menu </a></li>');
+
+          $("#toggle_menu").on('click', function(e) {
+            e.preventDefault();
+            $("#rptx-menu").slideToggle('slow');
+            $("#wrapper").animate({'margin-left': '-200px'}, 'slow');
+            $("#page-wrapper").animate({'padding-top': '50px'}, 'slow');
+            $("#rptx-menu-show").show();
+          });
+
         })
       });
     </script>
@@ -61,6 +72,9 @@
 
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul id="rptx-menu" class="nav navbar-nav side-nav"></ul>
+          <ul id="rptx-menu-show" class="nav navbar-nav side-nav" style="height: 50px">
+            <li><a href="#"><i class="fa"></i> Show menu </a></li>
+          </ul>
 
           <ul class="nav navbar-nav navbar-right navbar-user">
             <li class="dropdown messages-dropdown">
