--- a/cronoappliance/crono/templates/crono/layout.html
+++ b/cronoappliance/crono/templates/crono/layout.html
@@ -39,7 +39,7 @@
 
           $("#toggle_menu").on('click', function(e) {
             e.preventDefault();
-            $("#rptx-menu").slideToggle('slow');
+            $("#rptx-menu").slideToggle('fast');
             $("#wrapper").animate({'margin-left': '-200px'}, 'slow');
             $("#page-wrapper").animate({'padding-top': '50px'}, 'slow');
             $("#rptx-menu-show").show();
@@ -47,10 +47,10 @@
 
           $("#toggle_menu_show").on('click', function(e) {
             e.preventDefault();
-            $("#rptx-menu").slideToggle('slow');
+            $("#rptx-menu").slideToggle('fast');
             $("#wrapper").animate({'margin-left': '0px'}, 'slow');
             $("#page-wrapper").animate({'padding-top': '0px'}, 'slow');
-            $("#rptx-menu-show").show();
+            $("#rptx-menu-show").hide();
           });
 
         })
