--- a/cronoappliance/crono/templates/crono/dashboards/top_ten.html
+++ b/cronoappliance/crono/templates/crono/dashboards/top_ten.html
@@ -51,7 +51,7 @@
 		            argumentField: 'category',
 		            valueField: 'value',
 		            label: {
-		            	visible: true,
+		            	visible: false,
 		            }
 		        }    
 			    });
@@ -70,7 +70,7 @@
 		            argumentField: 'category',
 		            valueField: 'value',
 		            label: {
-		            	visible: true,
+		            	visible: false,
 		            }
 		        }    
 			    });
