--- a/cronoappliance/crono/templates/crono/dashboards/sites_info.html
+++ b/cronoappliance/crono/templates/crono/dashboards/sites_info.html
@@ -55,7 +55,9 @@
 				$.getJSON("{% url 'top10byrange' 999 998 %}".replace(999, from).replace(998, to), function(data) {
 					var pieChartDataSource = [];					
 					for (var i = 0; i<data.urls.length; i++) {
-						$('#urls tr:last').after('<tr class="removeRow"><td><a href="">'+data.urls[i].url+'</a></td><td>'+data.urls[i].count+'</td><tr>');
+						var url = "{% url 'site' 990 %}".replace(990, data.urls[i].url.replace('.','_'));
+						console.log(url);
+						$('#urls tr:last').after('<tr class="removeRow"><td><a href="'+url+'">'+data.urls[i].url+'</a></td><td>'+data.urls[i].count+'</td><tr>');
 						pieChartDataSource.push({'category': data.urls[i].url, 'value': data.urls[i].count})
 					}
 
