--- a/cronoappliance/crono/templates/crono/auth.html
+++ b/cronoappliance/crono/templates/crono/auth.html
@@ -1,27 +1,32 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-<title>Log in</title>
-<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-<style>
-body{
-	font-family:Arial,Helvetica,sans-serif;
-	font-size: 12px;
-}
-</style>
-</head>
-<body>
-	{{ state }}
-	<form action="/accounts/login/" method="post">{% csrf_token %}
-		{% if next %}
-		<input type="hidden" name="next" value="{{ next }}" />
-		{% endif %}
-		username:
-		<input type="text" name="username" value="{{ username}}" /><br />
-		password:
-		<input type="password" name="password" value="" /><br />
+{% extends 'crono/layout_login.html' %}
+{% load staticfiles %}
 
-		<input type="submit" value="Log In" />
-	</form>
-</body>
-</html>
+{% block head %}
+
+{% endblock %}
+
+{% block title %}Sites Information{% endblock %}
+{% block subtitle %}Sites visited by users{% endblock %}
+
+{% block content %}
+
+	{% if state_code == 0 %}
+		<div class="alert alert-dismissable alert-info loginmsg" style="width: 520px;">{{ state }}</div>
+	{% elif state_code == 1 %}
+		<div class="alert alert-dismissable alert-danger loginmsg" style="width: 520px;">{{ state }}</div>
+	{% endif %}
+
+	<div id="loginbox">
+		<form action="/accounts/login/" method="post" role="form">{% csrf_token %}
+			{% if next %}
+			<input type="hidden" name="next" value="{{ next }}" />
+			{% endif %}
+			<label>Username</label>
+			<input type="text" name="username" value="{{ username}}" class="form-control" style="width: 460px;"/><br />
+			<label>Password</label>
+			<input type="password" name="password" value="" class="form-control" style="width: 460px;" /><br />
+			<input type="submit" value="Log In" class="btn btn-primary"/>
+		</form>
+	</div>
+
+{% endblock %}
