--- a/cronoappliance/crono/templates/crono/dashboards/sites_info.html
+++ b/cronoappliance/crono/templates/crono/dashboards/sites_info.html
@@ -24,6 +24,7 @@
 			$("#url_box").hide();
 			$("#url_box_denied").hide();
 			$("#url_box_all").hide();
+			$("#traffic_total").hide();
 
 			$("#datepicker_from").datepicker({
 				"showAnim": "bounce",
@@ -44,6 +45,7 @@
 				$("#url_box").show();
 				$("#url_box_denied").show();
 				$("#url_box_all").show();
+				$("#traffic_total").show();
 				var from = $("#datepicker_from").val();
 				from = from.replace('/', '_');
 				from = from.replace('/', '_');
@@ -55,7 +57,7 @@
 				$.getJSON("{% url 'top10byrange' 999 998 %}".replace(999, from).replace(998, to), function(data) {
 					var pieChartDataSource = [];					
 					for (var i = 0; i<data.urls.length; i++) {
-						var url = "{% url 'site' 990 %}".replace(990, data.urls[i].url.replace('.','_'));
+						var url = "{% url 'site' 990 %}?from=XX&to=YY".replace(990, data.urls[i].url.replace('.','_')).replace('XX', from).replace('YY', to);
 						console.log(url);
 						$('#urls tr:last').after('<tr class="removeRow"><td><a href="'+url+'">'+data.urls[i].url+'</a></td><td>'+data.urls[i].count+'</td><tr>');
 						pieChartDataSource.push({'category': data.urls[i].url, 'value': data.urls[i].count})
@@ -111,6 +113,35 @@
 							},
 							minorTick: {
 								visible: true,
+								tickInterval: 0.1//(data.traffic/1024/1024) % 10,
+							}
+						},
+						needles: [
+							{'value': data.traffic/1024/1024, width: 6},
+						],
+						markers: [
+							{'value': data.traffic/1024/1024},
+						],
+						title: {
+							text: 'All Traffic',
+							font: {
+								family: 'Zapf-Chancery, cursive',
+								weight: 400,
+								color: 'forestgreen',
+								size: 14
+							}
+						}
+
+					});
+					$("#charttraffic2").dxCircularGauge({
+						scale: {
+							startValue: '0',
+							endValue: (data.traffic/1024/1024) + (data.traffic/1024/1024)/3,
+							majorTick: {
+								tickInterval: (data.traffic/1024/1024) % 5,
+							},
+							minorTick: {
+								visible: true,
 								tickInterval: (data.traffic/1024/1024) % 10,
 							}
 						},
@@ -120,7 +151,15 @@
 						markers: [
 							{'value': data.traffic/1024/1024},
 						],
-
+						title: {
+							text: 'Denies',
+							font: {
+								family: 'Zapf-Chancery, cursive',
+								weight: 400,
+								color: 'forestgreen',
+								size: 14
+							}
+						}
 					});
 				});
 
@@ -209,13 +248,14 @@
   	</div>
 	</div>
 
-	<div id="traffic_total" class="col-lg-5">
+	<div id="traffic_total" class="col-lg-7">
   	<div class="panel panel-primary">
   		<div class="panel-heading">
   			<h3 class="panel-title">Traffic Consumption (GB)</h3>
   		</div>
   		<div class="panel-body">
-  			<div id="charttraffic" style="width: 400px; margin-left: 38px;"></div>
+  			<div id="charttraffic" style="width: 350px;float:left;"></div>
+  			<div id="charttraffic2" style="width: 350px;float:left;"></div>
   		</div>
   	</div>
 	</div>
