Little chances in proxy template

--- a/cronoappliance/crono/templates/crono/proxy.html
+++ b/cronoappliance/crono/templates/crono/proxy.html
@@ -21,7 +21,8 @@
   <li class="active"><a href="#sites">Blocked Sites</a></li>
   <li><a href="#users">Users</a></li>
   <li><a href="#network">Network</a></li>
-  <li><a href="#speed">Speed</a></li>
+  <li><a href="#speed">Bandwidth</a></li>
+  <li><a href="#speed">VPN</a></li>
 </ul>
 
 <div class="tab-content">
