--- a/cronoappliance/crono/templates/crono/proxy.html
+++ b/cronoappliance/crono/templates/crono/proxy.html
@@ -54,7 +54,7 @@
   	</div>
  	</div>
   <div class="tab-pane fade" id="users">
-  	b
+  	Users
   </div>
   <div class="tab-pane fade" id="network">
   	c
