--- a/cronoappliance/crono/templates/crono/proxy.html
+++ b/cronoappliance/crono/templates/crono/proxy.html
@@ -5,9 +5,15 @@
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$('#myTab a').click(function (e) {
-  			e.preventDefault()
-  			$(this).tab('show')
+	  			e.preventDefault()
+	  			$(this).tab('show')
 			})
+
+			$.getJSON("{% url 'all' %}", function(users) {
+				$.each(users, function(i, user) {
+					$("#users-table tbody").append("<tr><td>"+user+"</td><td><a>DEL</a>  <a>MOD</a></td></tr>");
+				});
+			});
 		});
 	</script>
 {% endblock %}
@@ -54,7 +60,28 @@
   	</div>
  	</div>
   <div class="tab-pane fade" id="users">
-  	Users
+        <div class="row">
+                        <div class="col-lg-12">
+                                <br><br>
+                                <div class="panel panel-primary">
+                                        <div class="panel-heading">
+                                                <h3 class="panel-title">Users</h3>
+                                        </div>
+                                        <div class="panel-body">
+                                                <table id="users-table" class="table">
+                                                        <thead>
+                                                                <th>USER</th>
+                                                                <th>ACTIONS</th>
+                                                        </thead>
+                                                        <tbody>
+                                                        </tbody>
+                                                </table>
+                                                <div id="pieChartContainer" style="float:left;max-width:525px;height: 200px;"></div>
+                                        </div>
+                                </div>
+                </div>
+        </div>
+        </div>
   </div>
   <div class="tab-pane fade" id="network">
   	c
